--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyggex</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel = "icon" href =  "https://res.cloudinary.com/do4vytmxm/image/upload/v1697276724/Rectangle_myfkh1.png" 
+            type = "image/x-icon"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=La+Belle+Aurore&display=swap" rel="stylesheet">
 </head>
